syntax = "proto3";

package vn.co.abc.banking.proto;

option java_multiple_files = true;
option java_package = "vn.co.abc.banking.proto";

message Response{
  int32 status = 1;
}

enum StatusCode {
  OK = 0;
  CANCELLED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
}